test/good/Unstable.hs
{-# LANGUAGE_HAZY NoStableImports #-}
module Unstable where

import Data.Bool

or a b = a || b
