test/bad/resolve/Unstable.hs
{-# LANGUAGE_HAZY StableImports #-}
module Unstable where

import Data.Bool

or a b = a || b
